--- a/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
@@ -127,7 +127,7 @@
 
 .membersContent {
     .memberName {
-        padding: 0 4px 0 0; /*rtl*/
+        padding: 11px 4px 0 0; /*rtl*/
     }
 }
 
@@ -142,10 +142,6 @@
 }
 
 .memberItem {
-    width: 100%;
-    height: 36px;
-    line-height: 36px;
-    clear: both;
     padding: 5px 5px 5px 0; /*rtl*/
     margin: 0 -5px 3px 0; /*rtl*/
     .btn1 {
